# rockon

./: .codespellrc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Pipfile  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  qodana.yml  tox.ini
.github/: dependabot.yml
.github/workflows/: docker_build.yml
contrib/: bblegacy-nginx.conf  example-notebook.ipynb  nginx.conf
docker/: Dockerfile  entrypoint.sh
docs/: import-vouchers.md  routes.md
examples/: example_data.json
src/: manage.py
src/api/: routers.py  serializers.py  urls.py
src/api/permissions/: bands.py
src/api/serializers/: __init__.py  band.py
src/api/views/: __init__.py  account_create.py  band_techrider.py  bandmember_signup.py  bands.py  crew_signup.py  exhibitor_signup.py  magic_link.py  signup.py  update_user_email.py  update_user_profile.py  verify_email.py
src/band/: admin.py  apps.py
src/band/migrations/: 0001_initial.py
src/band/models/: __init__.py  band.py  bandmember.py  stage.py  timeslot.py
src/bands/: admin.py  apps.py  urls.py  views.py
src/bands/migrations/: 0001_initial.py  0002_band_are_students_band_cover_letter_band_facebook_and_more.py  0002_remove_bandmember_event_remove_timeslot_band_and_more.py  0003_band_bid_status.py  0003_remove_band_slot_band_slug_timeslot_band_and_more.py  0004_alter_bandmember_position.py  0004_bandmedia.py  0005_alter_bandmedia_options_alter_bandmedia_file.py  0005_band_techrider.py  0006_alter_band_options_alter_bandmember_options_and_more.py
src/bands/models/: __init__.py  band.py  band_media.py  bandmember.py  stage.py  timeslot.py
src/bands/templates/: application_form.html  members.html  techrider.html
src/bands/views/: __init__.py  application.py  members.py  streaming_upload.py  techrider.py
src/bblegacy/: admin.py  apps.py  bearer_token_auth.py  helper.py  urls.py  urls_media.py
src/bblegacy/migrations/: 0001_initial.py
src/bblegacy/models/: __init__.py  bid.py  custom_model.py  event.py  media.py  note.py  region.py  token.py  track.py  user.py  vote.py
src/bblegacy/views/: __init__.py  auth.py  bids.py  events.py  media.py  regions.py  tracks.py  users.py  votes.py
src/crew/: admin.py  apps.py  urls.py
src/crew/migrations/: 0001_initial.py  0002_remove_crewmember_is_underaged_crewmember_is_adult.py  0002_teamcategory_crewmember_intressted_in_team_category.py  0003_alter_crewmember_nutrition_attendanceaddition.py  0004_alter_crewmember_attendance.py  0005_alter_shirt_size.py  0006_rename_intressted_in_crewmember_interested_in.py  0007_alter_attendanceaddition_options_alter_crew_options_and_more.py
src/crew/models/: __init__.py  attendance.py  attendance_addition.py  crew.py  crew_member.py  crewmember.py  shirt.py  skill.py  team.py  team_category.py  team_member.py
src/crew/templates/: kitchen_attendance.html  preselect.html  signup.html  signup_profile_incomplete.html  signup_submitted.html
src/crew/views/: __init__.py  crewcoordination.py  kitchen.py  signup.py
src/crm/: admin.py  apps.py  magic_link_auth.py  urls.py
src/event/: admin.py  apps.py
src/exhibitors/: admin.py  apps.py  urls.py
src/fixtures/: default_groups.json  example_crew.json  example_crew_members.json  example_events.json
src/rockon/: asgi.py  settings.py  urls.py  urls_homepage.py  views.py  wsgi.py
src/templates/: base.html  footer.html  head.html  navbar.html  opengraph.html  system.html  userdropdown.html
src/tools/: admin.py  apps.py  urls_shortener.py
(+542 files in other folders)
