[project]
name = "rockon"
version = "0.7.5"
description = "Hyper customized Rocktreff data entry and lists thingamajig"
authors = [{ name = "ethrgeist", email = "knuth@ethergeist.de" }]
requires-python = ">=3.13.7,<4"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "blessed",
    "brotli",
    "dateparser",
    "django",
    "django-autoslug",
    "django-compressor",
    "django-cors-headers",
    "django-extensions",
    "django-filter",
    "django-health-check",
    "django-q2",
    "django-redis",
    "djangorestframework",
    "environs[django]",
    "gunicorn",
    "markdown",
    "pillow",
    "psycopg[binary, pool]",
    "psycopg-binary",
    "python-magic",
    "redis[hiredis]",
    "sentry-sdk",
    "tzdata",
    "python-slugify[unidecode]",
    "djlint",
    "django-csp",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "pre-commit",
    "black",
    "jupyter",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
