[project]
name = "rockon"
version = "0.7.5"
description = "Hyper customized Rocktreff data entry and lists thingamajig"
authors = [{ name = "ethrgeist", email = "knuth@ethergeist.de" }]
requires-python = ">=3.14.0,<4"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "blessed",
    "brotli",
    "channels[daphne]",
    "channels-redis",
    "dateparser",
    "django",
    "django-autoslug",
    "django-compressor",
    "django-libsass",
    "django-cors-headers",
    "django-extensions",
    "django-health-check",
    "django-q2",
    "django-redis",
    "environs[django]",
    "gunicorn",
    "markdown",
    "pillow",
    "psycopg[binary, pool]",
    "psycopg-binary",
    "python-magic",
    "redis[hiredis]",
    "sentry-sdk[django]",
    "tzdata",
    "python-slugify[unidecode]",
    "djlint",
    "django-ninja",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "pre-commit",
    "ruff",
    "jupyter",
    "ipython",
    "pytest",
    "pytest-django",
    "pytest-cov",
]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rockon.settings"
pythonpath = ["src"]
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
addopts = [
    "--cov=rockon",
    "--cov-report=term-missing",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
